code: Add sample Person-Note relationship

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,51 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Application Home Page</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-    <link rel="stylesheet" href="static/css/home.css">
-    <script
-      src="http://code.jquery.com/jquery-3.3.1.min.js"
-      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-      crossorigin="anonymous">
-    </script>
-</head>
-<body>
-    <div class="container">
-        <h1 class="banner">People Demo Application</h1>
-        <div class="section editor">
-            <input type="hidden" id="person-id" />
-            <label for="fname">First Name
-                <input id="fname" type="text" />
-            </label>
-            <br />
-            <label for="lname">Last Name
-                <input id="lname" type="text" />
-            </label>
-            <br />
-            <button id="create">Create</button>
-            <button id="update">Update</button>
-            <button id="delete">Delete</button>
-            <button id="reset">Reset</button>
-        </div>
-        <div class="people">
-            <table>
-                <caption>People</caption>
-                <thead>
-                    <tr>
-                        <th>First Name</th>
-                        <th>Last Name</th>
-                        <th>Update Time</th>
-                    </tr>
-                </thead>
-                <tbody>
-                </tbody>
-            </table>
-        </div>
-        <div class="error">
-        </div>
-    </div>
-</body>
-<script src="static/js/home.js"></script>
-</html>
+{% extends "parent.html" %}
+{% block title %}Home Blog{% endblock %}
+{% block head %}
+    {{ super() }}
+    <link rel="stylesheet" href="/static/css/home.css">
+{% endblock %}
+
+{% block page_name %}Mini-Blog Page Demo{% endblock %}
+
+{% block body %}
+<div class="blog">
+    <table>
+        <caption>People Blog Entries</caption>
+        <thead>
+            <tr>
+                <th>Creation/Update Timestamp</th>
+                <th>Person</th>
+                <th>Note</th>
+            </tr>
+        </thead>
+    </table>
+</div>
+<div class="error">
+</div>
+
+<!-- Handlebars script tag entry -->
+{% raw %}
+<script id="blog-table-template" type="text/x-handlebars-template">
+    <tbody>
+        {{#each notes}}
+        <tr data-person_id="{{person.person_id}}" data-note_id="{{note_id}}">
+            <td class="timestamp">{{formatTimestamp timestamp}}</td>
+            <td class="name">{{person.fname}} {{person.lname}}</td>
+            <td class="content">{{content}}</td>
+        </tr>
+        {{/each}}
+    </tbody>
+</script>
+{% endraw %}
+
+{% endblock %}
+
+{% block javascript %}
+{{ super() }}
+<script src="/static/js/home.js"></script>
+{% endblock %}
